# libmath

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/math/: angle.h  angle_inline.h  box2.h  box2_inline.h  box3.h  box3_inline.h  capsule2.h  capsule2_inline.h  ccd.h  ccd_inline.h  config.h  constant.h  convex8.h  convex8_inline.h  factorial.h  fibo.h  isometric.h  isometric_inline.h  line2.h  line2_inline.h  main_inline.h  mat2.h  mat2_inline.h  mat3.h  mat3_inline.h  mat4.h  mat4_inline.h  parabola.h  parabola_inline.h  plane.h  plane_inline.h  polygon2.h  quat.h  quat_inline.h  rand.h  rect.h  rect_inline.h  segment2.h  segment2_inline.h  simplex.h  (+16 more)
sandbox/: main.cpp
src/: angle.cpp  box2.cpp  box3.cpp  capsule2.cpp  ccd.cpp  convex8.cpp  factorial.cpp  fibo.cpp  isometric.cpp  line2.cpp  mat2.cpp  mat3.cpp  mat4.cpp  parabola.cpp  plane.cpp  polygon2.cpp  quat.cpp  rect.cpp  segment2.cpp  simplex.cpp  sphere2.cpp  triangle.cpp  triangle2.cpp  uv4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
